# ibus-table-array30

./: AUTHORS  CMakeLists.txt  ChangeLog  ChangeLog.prev  INSTALL  README  RELEASE-NOTES.txt
SPECS/: RPM-ChangeLog.prev  ibus-table-array30.spec  ibus-table-array30.spec.in
cmake_modules/: FedoraDeveloper.cmake  RPM.cmake
data/: array30.txt.in
src/: cin2ibus.c
